fix feedback callout for contrast

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -40,7 +40,7 @@
  */
 
 .feedback-callout {
-  background: var(--color-neutral-100);
+  background: var(--color-indigo-100);
 }
 
 button[data-action="toggle-side-panel"] {
